# zde-svn

./: ciabot_svn.sh
hooks/: post-commit
trunk/: .README.swp  Makefile.am  Makefile.in  configure.in  imp.vim
trunk/branches/zimwm-old/: ChangeLog  Doxyfile  README  TODO  zimwm.vim
trunk/branches/zimwm-old/data/: Makefile.am
trunk/branches/zimwm-old/src/: client-events.m  client.h  client.m  events.h  events.m  ewmh.h  focus.h  focus.m  ipc.h  main.m  modules.m  vdesk.h  widgets.m  zimsh
trunk/branches/zimwm-old/src/modules/: zimwm_module.h  zimwm_module.m
trunk/branches/zimwm-old/src/modules/pager/: Makefile.am
trunk/branches/zimwm-old/src/modules/systray/: Makefile.am
trunk/imp/: .in  AUTHORS  Doxyfile  INSTALL  Makefile.in  README  configure.in  imp-config.h.in  imp.pc.in  imp.vim
trunk/imp/src/: Makefile.am  Makefile.in  imp.h  impiterator.h  implists.h  impmemory.h  impobject.h  impobject.m  impstack.h  lists.m  memory.m  stack.m
trunk/imp/tests/: Makefile.am  Makefile.in  imp_test.m
trunk/obj-xcb/: COPYING  ChangeLog  Doxyfile  Makefile.am  README  TODO  configure.in  gendoc  obj-xcb.pc.in  objxcb-config.h.in  objxcb.vim
trunk/obj-xcb/design/: example.txt  notes
trunk/obj-xcb/proposal/: README  general_info.txt  obj-xcb.txt
trunk/obj-xcb/scripts/: codegen.pl  extgen.pl  xidgen.pl
trunk/obj-xcb/src/: Makefile.am  documentation.h  obj-xcb.h  xcb_conn.h  xcb_conn.m  xcb_events.h  xcb_events.m  xcb_win.h  xcb_win.m
trunk/obj-xcb/tests/: Makefile  Makefile.am  main.m
trunk/src/: Makefile.am  Makefile.in  implists.h  impmemory.h  lists.m  memory.m
trunk/tests/: imp_test.m
trunk/zimwm/: COMPLIANCE  Doxyfile  Makefile.am  README  TODO  autogen.sh  configure.in  zimwm.vim
trunk/zimwm/data/: Makefile.am
trunk/zimwm/src/: Makefile.am  client-events.h  client-events.m  client.h  client.m  events.h  events.m  ewmh.h  ewmh.m  focus.h  focus.m  ipc.h  ipc.m  ipc_commands.h  main.m  modules.h  modules.m  vdesk.h  vdesk.m  zimsh  zimwm.h  zone.h  zone.m
trunk/zimwm/src/modules/: Makefile.am  Makefile.in  zimwm_module.h  zimwm_module.m
trunk/zimwm/src/modules/pager/: pager.m
trunk/zimwm/src/modules/systray/: Makefile.am  Makefile.in  systray.m
trunk/zpager/: Makefile.am  Makefile.in  configure.in  zwl-config.h.in
trunk/zpager/src/: Makefile.am  Makefile.in  main.m
trunk/zwl/: .README.swp  DESIGN  Doxyfile  Makefile.am  Makefile.in  README  TODO  configure.in  svn-commit.tmp  zwl-config.h.in  zwl.pc.in  zwl.vim
trunk/zwl/src/: Makefile.am  Makefile.in  button.m  init.m  label.m  menu.m  widget.m  window.m  zwl.h  zwl_internal.h  zwl_internal.m  zwlbutton.h  zwlinit.h  zwllabel.h  zwlmenu.h  zwlwidget.h  zwlwindow.h
trunk/zwl/src/backend/: Makefile  Makefile.am
trunk/zwl/tests/: Makefile.am  Makefile.in  zwl_test.m
