bin_PROGRAMS  = zpager
zpager_SOURCES = main.m

INCLUDES = \
	   $(OBJXCB_CFLAGS) $(IMP_CFLAGS) $(ZWL_CFLAGS) $(CAIRO_CFLAGS) $(CAIRO_XCB_CFLAGS) $(XCB_COMPOSITE_CFLAGS) $(XCB_DAMAGE_CFLAGS) $(XCB_RENDERUTIL_CFLAGS)

zpager_LDADD = -lobjc -lpthread $(OBJXCB_LIBS) $(IMP_LIBS) $(ZWL_CFLAGS) $(CAIRO_LIBS) $(CAIRO_XCB_LIBS) $(XCB_COMPOSITE_LIBS) $(XCB_DAMAGE_LIBS) $(XCB_RENDERUTIL_LIBS)
